--- a/specs/source/web-price-indexes/index.html
+++ b/specs/source/web-price-indexes/index.html
@@ -232,33 +232,34 @@ Any customer browsing the vendor's e­-commerce site chooses a payment currency 
       <p>
 A bank-posted currency "exchange rate" is one pricing index choice, possibly moderated with a data smoothing technique. Two potential sources are:
 <ul>
-<li>Effective exchange rates published by central banks http://www.bis.org/statistics/eer/index.htm </li>
-<li>Spot exchange rate published by WM-Reuters http://www.wmcompany.com/pdfs/WMReutersMethodology.pdf</li>
+<li>Effective exchange rates published by central banks <a href="http://www.bis.org/statistics/eer/index.htm">http://www.bis.org/statistics/eer/index.htm</a> </li>
+<li>Spot exchange rate published by WM-Reuters <a href="http://www.wmcompany.com/pdfs/WMReutersMethodology.pdf">http://www.wmcompany.com/pdfs/WMReutersMethodology.pdf</a></li>
 </ul>
 
 A currency exchange rate may not be the optimal indexing choice for price stabilization or other objectives. 
 
 A global retail vendor may prefer to index their prices against a source such as the "World Price Index" supplied by EF Publishing:
 <ul>
-<li>http://www.worldeconomics.com/WorldPriceIndex/WPI.efp</li>
+<li><a href="http://www.worldeconomics.com/WorldPriceIndex/WPI.efp">http://www.worldeconomics.com/WorldPriceIndex/WPI.efp</a></li>
 </ul>
 
 Vendors in some fields may prefer an index based on a fraction of global market capitalization:
 <ul>
-<li>http://www.world-exchanges.org/statistics/monthly-query-tool
+<li><a href="http://www.world-exchanges.org/statistics/monthly-query-tool">http://www.world-exchanges.org/statistics/monthly-query-tool</a> 
 </ul>
 
 In other cases it may be desireable to index prices to the general global availability of selected primary commodities weighted by the production of each commodity in each country, and moderated with a data smoothing technique.
 <ul>
-<li>http://faostat3.fao.org/faostat-gateway/go/to/home/E</li>
-<li>http://www.iea.org/stats/mods.asp</li>
-<li>http://unstats.un.org/unsd/mbs/app/DataSearchTable.aspx</li>
-<li>http://unctadstat.unctad.org/ReportFolders/reportFolders.aspx</li>
+<li><a href="http://faostat3.fao.org/faostat-gateway/go/to/home/E">http://faostat3.fao.org/faostat-gateway/go/to/home/E</a></li>
+<li><a href="http://www.iea.org/stats/mods.asp">http://www.iea.org/stats/mods.as</a></li>
+<li><a href="http://unstats.un.org/unsd/mbs/app/DataSearchTable.aspx">http://unstats.un.org/unsd/mbs/app/DataSearchTable.aspx</a></li>
+<li><a href="http://unctadstat.unctad.org/ReportFolders/reportFolders.aspx">http://unctadstat.unctad.org/ReportFolders/reportFolders.aspx</a></li>
 </ul>
 
 Some vendors may find it attractive to associate their pricing with changes to underlying global indicators of biophysical capacity in each exclusive economic zone to obtain or supply real goods and services, for example:
 <ul>
-<li>Satellite data on surface thermal reflectivity http://landsat.usgs.gov/best_spectral_bands_to_use.php </li>
+<li>A synthesis of the above primary commodity reserve indicators with ecological productivity indicators such as...
+<li>Satellite data on surface thermal reflectivity <a href="http://landsat.usgs.gov/best_spectral_bands_to_use.php">http://landsat.usgs.gov/best_spectral_bands_to_use.php</a> </li>
 <li style="list-style-type:none">
       <ul>
       <li>Band 2 - Green (0.52 to 0.60) Reveals peak vegetation, which is useful for assessing plant vigor</li>
