--- a/specs/source/web-price-indexes/index.html
+++ b/specs/source/web-price-indexes/index.html
@@ -258,7 +258,7 @@ In other cases it may be desireable to index prices to the general global availa
 
 Some vendors may find it attractive to associate their pricing with changes to underlying global indicators of biophysical capacity in each exclusive economic zone to obtain or supply real goods and services, for example:
 <ul>
-<li>A synthesis of the above primary commodity reserve indicators with ecological productivity indicators such as...
+<li>A synthesis of the above primary commodity reserve indicators together with global ecological productivity indicators such as...
 <li>Satellite data on surface thermal reflectivity <a href="http://landsat.usgs.gov/best_spectral_bands_to_use.php">http://landsat.usgs.gov/best_spectral_bands_to_use.php</a> </li>
 <li style="list-style-type:none">
       <ul>
