--- a/specs/source/web-price-indexes/index.html
+++ b/specs/source/web-price-indexes/index.html
@@ -211,7 +211,12 @@
     <section>
       <h2>Introduction</h2>
       <p>
-The Web Payments system includes pricing indices to enable vendor choice in (a) pricing method; (b) transaction currency. Any vendor may implement fixed, differentiated or indexed pricing. And any vendor may designate one or more currencies in which to receive payment. Following from this, any purchaser may issue payments in any of a vendor's designated currencies.
+The Web Payments system includes pricing indices to enable vendor choice in (a) pricing method; (b) transaction currency.
+<ul>
+<li>Any vendor may implement fixed, differentiated or indexed pricing. 
+<li>Any vendor may designate one or more currencies in which to receive payment.
+</ul>
+Following from this, any purchaser may issue payments in any of a vendor's designated currencies.
       </p>
     </section>
 
