Favicon updates and unification of header/footer.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Web Payments">
     <meta name="author" content="Manu Sporny">
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 
     <title>Web Payments</title>
 
@@ -37,16 +37,17 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon icon-arrow-down" style="font-size:30px; color:#1abc9c;"></span>
+            <img class="navbar-logo" src="images/logo-32.png">
           </button>
+          <a class="navbar-brand hidden-xs hidden-sm" href="#home"><img class="navbar-logo" src="images/logo-32.png"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="#home" class="smoothScroll">Home</a></li>
-            <li> <a href="#about" class="smoothScroll"> About</a></li>
-            <li> <a href="#specs" class="smoothScroll"> Specs</a></li>
-            <li> <a href="#participate" class="smoothScroll"> Participate</a></li>
-            <li> <a href="#contact" class="smoothScroll"> Contact</a></li>
+            <li> <a href="#about" class="smoothScroll">About</a></li>
+            <li> <a href="#specs" class="smoothScroll">Specs</a></li>
+            <li> <a href="#participate" class="smoothScroll">Participate</a></li>
+            <li> <a href="#contact" class="smoothScroll">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
