Replacing the word 'standards' with 'technologies' in key places.
This is being done at the request of W3C due to branding concerns.
W3C does not want the 'standards' language used unless there is
an active Working Group taking a specification through the
Recommendation track.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div id="headerwrap" id="home" name="home">
       <header class="clearfix">
              <h1>Web Payments</h1>
-             <p>Payment standards for the Web.</p>
+             <p>Payment technologies for the Web.</p>
         </header>      
       </div><!-- /headerwrap -->
 
@@ -73,7 +73,7 @@
         <div class="col-lg-4 callout">
           <span class="icon icon-share"></span>
           <h2>What</h2>
-          <p>We're creating a set of universal payment standards to make sending and receiving money over the Web as easy as sending an email.</p>
+          <p>We're creating a set of universal payment technologies to make sending and receiving money over the Web as easy as sending an email.</p>
         </div><!-- col-lg-4 -->  
         
         <div class="col-lg-4 callout">
@@ -110,7 +110,7 @@ same thing for money. There is no global standard for sending money over the Int
       <div class="container">
         <h1>OUR APPROACH</h1>
         <hr>
-        <p>We are using the same approach that put the Web into the hands of 2.4 billion people around the world; the creation of Web standards by leading technology companies, governments, financial institutions, and the public at large.</p>
+        <p>We are using the same approach that put the Web into the hands of 2.4 billion people around the world; creating technologies through standards setting organizations, leading technology companies, governments, financial institutions, and the public at large.</p>
       </div><!-- container -->
     </section><!-- section -->
     
