Fixed landing page headline to be less divisive. Related to #20.
 * Identified the "Who" more appropriately (as the community).
 * Reworded the "ailing financial infrastructure" statement.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="col-lg-4 callout">
           <span class="icon icon-users"></span>
           <h2>Who</h2>
-          <p>The people that built the Web are now building payments into its core. 2.4 billion people stand to benefit.</p>
+          <p>An open community of Web technologists is building payments into the core architecture of the Web. 2.4 billion people stand to benefit.</p>
         </div><!-- col-lg-4 -->
           
         <div class="col-lg-4 callout">
@@ -79,7 +79,7 @@
         <div class="col-lg-4 callout">
           <span class="icon icon-heart"></span>
           <h2>Why</h2>
-          <p>The Web can help us heal our ailing financial infrastructure and create a more equitable future for all of us.</p>
+          <p>The Web is going to play key role in achieving a resilient financial infrastructure and creating a more equitable future for all of us.</p>
         </div><!-- col-lg-4 -->  
       </div><!-- row -->
     </div><!-- greywrap -->
