Fix stylesheet loading over http vs https.
Use protocol relative syntax.

--- a/specs/ED/vocabs/security/2012-05-27/index.html
+++ b/specs/ED/vocabs/security/2012-05-27/index.html
@@ -624,7 +624,7 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
         color: #060;
     }
 }
-</style><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /><script type="text/javascript" src="http://s3.amazonaws.com/green-turtle/RDFa.0.15.0.js"></script><meta name="green-turtle-rdfa-message" content="{ &quot;type&quot;: &quot;status&quot;, &quot;loaded&quot;: true, &quot;count&quot;: 44 }" /></head> 
+</style><link href="//www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /><script type="text/javascript" src="http://s3.amazonaws.com/green-turtle/RDFa.0.15.0.js"></script><meta name="green-turtle-rdfa-message" content="{ &quot;type&quot;: &quot;status&quot;, &quot;loaded&quot;: true, &quot;count&quot;: 44 }" /></head> 
   <body prefix="rdf: http://www.w3.org/1999/02/22-rdf-syntax-ns#
     rdfs: http://www.w3.org/2000/01/rdf-schema#
     owl: http://www.w3.org/2002/07/owl#
