--- a/specs/ED/vocabs/signature/2011-01-09/index.html
+++ b/specs/ED/vocabs/signature/2011-01-09/index.html
@@ -440,7 +440,7 @@ pre.sh_sourceCode .sh_section { color: black; font-weight: bold; }
 pre.sh_sourceCode .sh_paren { color: red; }
 pre.sh_sourceCode .sh_attribute { color: #006400; }
 
-</style><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8"></head> 
+</style><link href="//www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8"></head> 
   <body xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:owl="http://www.w3.org/2002/07/owl#" xmlns:vs="http://www.w3.org/2003/06/sw-vocab-status/ns#" xmlns:sig="http://purl.org/signature#" style="display: inherit; "><div class="head"><p></p><h1>Digital Signature Vocabulary</h1><h2 id="unofficial-draft-09-january-2011">Unofficial Draft 09 January 2011</h2><dl><dt>Editor:</dt><dd><a href="http://digitalbazaar.com/">Manu Sporny</a>, <a href="http://digitalbazaar.com/">Digital Bazaar, Inc.</a></dd></dl><p class="copyright"> Copyright 2010-2011 &copy; Digital Bazaar, Inc. Shared under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution Share-Alike license</a>.</p><hr></div> 
 
     <div id="abstract" class="introductory section"><h2 id="abstract-1">Abstract</h2> 
