--- a/specs/ED/payment-links/2011-10-08/index.html
+++ b/specs/ED/payment-links/2011-10-08/index.html
@@ -482,7 +482,7 @@ pre.sh_sourceCode .sh_attribute { color: #006400; }
 ol.algorithm li { margin: 0.5em 0; }
 ol.algorithm li:before { font-weight: bold; counter-increment: numsection; content: counters(numsection, ".") ") "; }
 
-</style><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /></head> 
+</style><link href="//www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /></head> 
   <body style="display: inherit; "><div class="head"><p></p><h1 class="title" id="title">Payment Links 1.0</h1><h2 id="unofficial-draft-08-october-2011">Unofficial Draft 08 October 2011</h2><dl><dt>Editor:</dt><dd><a href="http://digitalbazaar.com/">Manu Sporny</a>, <a href="http://digitalbazaar.com/">Digital Bazaar, Inc.</a></dd>
 <dt>Author:</dt><dd><a href="http://stakeventures.com/pages/whoami">Pelle Braendgaard</a>, <a href="http://stakeventures.com/">Stake Ventures</a></dd>
 </dl><p class="copyright">This document is licensed under a <a class="subfoot" href="http://creativecommons.org/licenses/by/3.0/" rel="license">Creative Commons Attribution 3.0 License</a>.</p><hr /></div> 
