--- a/specs/ED/vocabs/commerce/2011-12-13/index.html
+++ b/specs/ED/vocabs/commerce/2011-12-13/index.html
@@ -624,7 +624,7 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
         color: #060;
     }
 }
-</style><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /></head> 
+</style><link href="//www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /></head> 
   <body xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#" xmlns:owl="http://www.w3.org/2002/07/owl#" xmlns:vs="http://www.w3.org/2003/06/sw-vocab-status/ns#" style="display: inherit; "><div class="head"><p></p><h1 class="title" id="title">Commerce Vocabulary</h1><h2 id="unofficial-draft-13-december-2011">Unofficial Draft 13 December 2011</h2><dl><dt>Editor:</dt><dd><a href="http://digitalbazaar.com/">Manu Sporny</a>, <a href="http://digitalbazaar.com/">Digital Bazaar, Inc.</a></dd>
 </dl><p class="copyright">Copyright 2009-2011 © Digital Bazaar, Inc. Shared under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution Share-Alike license</a>.</p><hr /></div> 
     <div id="abstract" class="introductory section"><h2>Abstract</h2> 
