--- a/specs/ED/vocabs/payswarm/2011-03-06/index.html
+++ b/specs/ED/vocabs/payswarm/2011-03-06/index.html
@@ -440,7 +440,7 @@ pre.sh_sourceCode .sh_section { color: black; font-weight: bold; }
 pre.sh_sourceCode .sh_paren { color: red; }
 pre.sh_sourceCode .sh_attribute { color: #006400; }
 
-</style><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8"></head> 
+</style><link href="//www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8"></head> 
   <body style="display: inherit; "><div class="head"><p></p><h1>PaySwarm Vocabulary</h1><h2 id="unofficial-draft-06-march-2011">Unofficial Draft 06 March 2011</h2><dl><dt>Editor:</dt><dd><a href="http://digitalbazaar.com/">Manu Sporny</a>, <a href="http://digitalbazaar.com/">Digital Bazaar, Inc.</a></dd></dl><p class="copyright"> Copyright 2009-2010 © Digital Bazaar, Inc.</p><hr></div> 
     <div id="abstract" class="introductory section"><h2 id="abstract-1">Abstract</h2> 
       <p> 
