--- a/specs/ED/vocabs/payswarm/2011-12-13/index.html
+++ b/specs/ED/vocabs/payswarm/2011-12-13/index.html
@@ -624,7 +624,7 @@ li.L1, li.L3, li.L5, li.L7, li.L9 {
         color: #060;
     }
 }
-</style><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /></head> 
+</style><link href="//www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /></head> 
   <body style="display: inherit; "><div class="head"><p></p><h1 class="title" id="title">PaySwarm Vocabulary</h1><h2 id="unofficial-draft-13-december-2011">Unofficial Draft 13 December 2011</h2><dl><dt>Editor:</dt><dd><a href="http://digitalbazaar.com/">Manu Sporny</a>, <a href="http://digitalbazaar.com/">Digital Bazaar, Inc.</a></dd>
 </dl><p class="copyright">Copyright 2009-2011 © Digital Bazaar, Inc.</p><hr /></div> 
     <div id="abstract" class="introductory section"><h2>Abstract</h2> 
