--- a/specs/ED/web-api/2011-09-26/index.html
+++ b/specs/ED/web-api/2011-09-26/index.html
@@ -486,7 +486,7 @@ pre.sh_sourceCode .sh_attribute { color: #006400; }
 ol.algorithm li { margin: 0.5em 0; }
 ol.algorithm li:before { font-weight: bold; counter-increment: numsection; content: counters(numsection, ".") ") "; }
 
-</style><link href="http://www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /></head> 
+</style><link href="//www.w3.org/StyleSheets/TR/w3c-unofficial" rel="stylesheet" type="text/css" charset="utf-8" /></head> 
   <body style="display: inherit; "><div class="head"><p></p><h1 class="title" id="title">PaySwarm 1.0 - Web API</h1><h2 id="unofficial-draft-26-september-2011">Unofficial Draft 26 September 2011</h2><dl><dt>Editor:</dt><dd><a href="http://digitalbazaar.com/">Manu Sporny</a>, <a href="http://digitalbazaar.com/">Digital Bazaar, Inc.</a></dd>
 </dl><p>This document is also available in this non-normative format: <a href="diff-20110920.html">diff to previous version</a>.</p><p class="copyright">Copyright 2009-2011 © Digital Bazaar, Inc.</p><hr /></div> 
     <div id="abstract" class="introductory section"><h2>Abstract</h2> 
