Fix links and references.
- Use https://web-payments.org/ base.
- Update to link to secure-messaging spec.
- Use AES vs FIPS-197.
- Fix typos.

--- a/specs/source/design-principles/index.html
+++ b/specs/source/design-principles/index.html
@@ -151,7 +151,7 @@
           // previousMaturity:  "WD",
  
           // if there a publicly available Editor's Draft, this is the link
-          edDraftURI:           "http://payswarm.com/specs/source/design-principles/",
+          edDraftURI:           "https://web-payments.org/specs/source/design-principles",
  
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
