--- a/specs/source/payment-intents/index.html
+++ b/specs/source/payment-intents/index.html
@@ -149,7 +149,7 @@
           // previousMaturity:  "WD",
  
           // if there a publicly available Editor's Draft, this is the link
-          edDraftURI:           "http://payswarm.com/specs/source/payment-intents/",
+          edDraftURI:           "https://web-payments.org/specs/source/payment-intents",
  
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
@@ -267,7 +267,7 @@ intents into <tref>contract</tref>s.
         </p>
 
         <p class="issue">
-This section still needs a ton of work: specify the JSON-LD messages that are 
+This section still needs a ton of work: specify the [[!JSON-LD]] messages that are 
 transmitted in detail, examples, and cover error conditions and
 exceptions.
         </p>
