--- a/specs/source/payment-links/index.html
+++ b/specs/source/payment-links/index.html
@@ -146,7 +146,7 @@
           // previousMaturity:  "WD",
  
           // if there a publicly available Editor's Draft, this is the link
-          edDraftURI:           "http://payswarm.com/specs/source/payment-links/",
+          edDraftURI:           "https://web-payments.org/specs/source/payment-links",
  
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
