--- a/specs/source/use-cases/index.html
+++ b/specs/source/use-cases/index.html
@@ -15,7 +15,7 @@
           specStatus:           "CG-DRAFT",
           
           // the specification's short name, as in http://www.w3.org/TR/short-name/
-          shortName:            "payswarm-use-cases",
+          shortName:            "web-payments-use-cases",
  
           // if you wish the publication date to be other than today, set this
           // publishDate:  "2009-08-06",
@@ -26,7 +26,7 @@
           // previousMaturity:  "WD",
  
           // if there a publicly available Editor's Draft, this is the link
-          edDraftURI:           "http://payswarm.com/specs/payswarm-use-cases.html",
+          edDraftURI:           "https://web-payments.org/specs/source/use-cases",
  
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
