--- a/specs/source/web-price-indexes/index.html
+++ b/specs/source/web-price-indexes/index.html
@@ -151,7 +151,7 @@
           // previousMaturity:  "WD",
  
           // if there a publicly available Editor's Draft, this is the link
-          edDraftURI:           "http://payswarm.com/specs/source/web-price-indexes/",
+          edDraftURI:           "https://web-payments.org/specs/source/web-price-indexes",
  
           // if this is a LCWD, uncomment and set the end of its review period
           // lcEnd: "2009-08-05",
