Removing "PaySwarm" from specifications as the terminology is confusing.

--- a/specs/source/use-cases/index.html
+++ b/specs/source/use-cases/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
   <head> 
-    <title>PaySwarm - Use Cases</title> 
+    <title>Web Payments Use Cases</title> 
     <meta http-equiv='Content-Type' content='text/html;charset=utf-8'/> 
     <!-- 
       === NOTA BENE ===
@@ -116,10 +116,10 @@ human condition.
     </section>
 
     <section>
-      <h2>PaySwarm 1.0 Use Cases</h2>
+      <h2>Web Payments 1.0 Use Cases</h2>
       <p>
 The following use cases outline scenarios that are targeted to be supported
-in the set of PaySwarm 1.0 specifications.
+in the set of Web Payments 1.0 specifications.
       </p>
 
     <section> 
@@ -438,7 +438,7 @@ access PIN that is tied to a particular payment site and customer account.
 It is a hot day and Larson is thirsty. He spots a nearby refrigerated vending
 machine that is selling cold lemonade. He notices that the vending machine,
 while having no Internet connection to the outside world, allows him to
-use his mobile device to make a purchase using PaySwarm. He clicks the button,
+use his mobile device to make a purchase using Web Payments. He clicks the button,
 his phone activates and asks him if he wants to make the purchase, he clicks
 yes and the lemonade drops into the receiving bucket.
     </p>
@@ -646,7 +646,7 @@ down-stream profit and limiting advertising.
       <p>
 The following use cases were identified as important use cases, but have been
 postponed until implementation lessons have been learned from the base 
-PaySwarm specification.
+Web Payments specifications.
       </p>
 
   <section> 
