Clarification on a vendor being able to sell both digital and physical.

--- a/specs/source/web-commerce-api/index.html
+++ b/specs/source/web-commerce-api/index.html
@@ -173,7 +173,7 @@ payment provider can identify the vendor.
       </dd>
       <dt><tdef>vendor</tdef></dt>
       <dd>
-A seller of digital goods or services.
+A seller of goods or services.
       </dd>
       <dt><tdef>payment provider</tdef></dt>
       <dd>
