Added Web Commerce API to list of specs. Added warning about API.

--- a/specs/source/web-commerce-api/index.html
+++ b/specs/source/web-commerce-api/index.html
@@ -420,6 +420,14 @@ that indicates a transaction was fully processed and was successful:
 <section>
   <h2>The Application Programming Interface</h2>
 
+  <p class="issue">
+This browser-based API is provided for convenience purposes only. The 
+existence of the API is absolutely not a requirement for the basic operation
+of the Web Payments protocol. No browser API is necessary in order for a
+Web application to initiate payment and receive a digital receipt of the
+result of the payment.
+  </p>
+
   <p>This API provides a clean mechanism that enables developers to 
     initiate payments in a <tref>User Agent</tref>. 
     A conformant Payment Initator MUST implement the entirety of the 
