--- a/specs/source/web-commerce-api/index.html
+++ b/specs/source/web-commerce-api/index.html
@@ -231,6 +231,11 @@ The vendor software receives a digital receipt of the sale and may then
 verify whether or not the payment was processed successfully.
     </li>
   </ol>
+  <p>
+The diagram below outlines the basic payment flow described above.
+  </p>
+  <img style="display: block; margin-left: auto; margin-right: auto; 
+    max-height:100%; max-width:50%;" src="basicOfferAndPurchase.svg">
 </section>
 
 <section>
