Add acknowledgement of contributions from Web Payments Workshop.

--- a/specs/source/use-cases/index.html
+++ b/specs/source/use-cases/index.html
@@ -1172,8 +1172,9 @@ payee) may then use the receipt as a proof-of-purchase for the good or service.
     <h2>Acknowledgements</h2>
  
     <p>
-The editor is thankful to the following contributions from the Web 
-Payments Community Group, specifically (in alphabetical order): TBD
+The editor is thankful to the following contributions from the 
+Web Payments Workshop and the Web Payments Community Group, specifically 
+(in alphabetical order): TBD
     </p>
 
   </section>
